log
Thu 09 Mar 2023 03:39:00 PM UTC: 
 tests:  0|7
total_score: 0/70
02ebbab
Thu 09 Mar 2023 03:48:01 PM UTC: 
 tests:  0|7
total_score: 0/70
f08f509
Thu 09 Mar 2023 03:50:22 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|6
total_score: 10/70
4b3eb28
Thu 09 Mar 2023 04:00:02 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8eb8f67
Thu 09 Mar 2023 04:04:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
8030090
Thu 09 Mar 2023 04:12:31 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
f7689d8
Thu 09 Mar 2023 04:25:29 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:11: error: function returns address of local variable [-Werror=return-local-addr]
   90 |    return vectorEstatico;
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cb53ce
Thu 09 Mar 2023 09:31:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:5: error: ‘vectorEstatico’ undeclared (first use in this function)
   86 |     vectorEstatico[i].datos =calloc(n,sizeof(int));
      |     ^~~~~~~~~~~~~~
exercises.c:86:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:82:10: error: unused variable ‘vector’ [-Werror=unused-variable]
   82 |   Vector vector[n];
      |          ^~~~~~
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3592b8e
Thu 09 Mar 2023 09:31:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:11: error: function returns address of local variable [-Werror=return-local-addr]
   90 |    return vectorEstatico;
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b61a0df
Thu 09 Mar 2023 09:32:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:26: error: expected expression before ‘]’ token
   90 |    return vectorEstatico[];
      |                          ^
exercises.c:82:10: error: variable ‘vectorEstatico’ set but not used [-Werror=unused-but-set-variable]
   82 |   Vector vectorEstatico[n];
      |          ^~~~~~~~~~~~~~
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
935703d
Thu 09 Mar 2023 09:32:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:26: error: expected expression before ‘]’ token
   90 |    return vectorEstatico[];
      |                          ^
exercises.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1fa4b36
Thu 09 Mar 2023 09:32:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:25: error: expected ‘;’ before ‘}’ token
   90 |    return vectorEstatico
      |                         ^
      |                         ;
   91 | }
      | ~                        
Compilation failed
b121d73
Thu 09 Mar 2023 09:32:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
14238aa
Thu 09 Mar 2023 09:34:52 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:99:8: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   99 |   v[i]=valor;
      |        ^~~~~
Compilation failed
deb8dad
Thu 09 Mar 2023 09:35:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8250b14
Thu 09 Mar 2023 09:36:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:99:13: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   99 |   v[i].datos=valor;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
35c6f8d
Thu 09 Mar 2023 09:36:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4f3da63
Thu 09 Mar 2023 09:40:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
6743ac9
Thu 09 Mar 2023 09:43:16 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
1b3ceb6
Thu 09 Mar 2023 09:53:10 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:123:22: error: ‘capacidad’ undeclared (first use in this function)
  123 |   for (size_t i=0; i<capacidad;i++)
      |                      ^~~~~~~~~
exercises.c:123:22: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:124:14: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  124 |     c[i]=a[i]+b[i];
      |          ~~~~^~~~~
      |           |    |
      |           |    Vector
      |           Vector
exercises.c:121:11: error: unused variable ‘largo’ [-Werror=unused-variable]
  121 | short int largo=a->capacidad;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
68a80fc
Thu 09 Mar 2023 09:53:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:124:14: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  124 |     c[i]=a[i]+b[i];
      |          ~~~~^~~~~
      |           |    |
      |           |    Vector
      |           Vector
Compilation failed
b644231
Thu 09 Mar 2023 09:54:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:124:31: error: expected expression before ‘->’ token
  124 |     c->datos[i]=a->datos[i]+b[->datos[i];
      |                               ^~
exercises.c:124:42: error: expected ‘;’ before ‘}’ token
  124 |     c->datos[i]=a->datos[i]+b[->datos[i];
      |                                          ^
      |                                          ;
  125 | 
  126 | }
      | ~                                         
Compilation failed
709d49b
Thu 09 Mar 2023 09:54:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ec03826
